# Backend/app/Http/Controllers/Apis/CategoryController.php
@@ -118,7 +118,110 @@ class CategoryController extends Controller
 
             return response()->json(['data' => $response], 200);
         }catch (\Throwable $e) {
-            return response()->json(['data' => $e->me], 200);
+            return response()->json(['data' => 'Category not found'], 404);
+        }
+    }
+
+    /**
+     * @OA\Put(
+     *     path="/api/v1/categories/{id}",
+     *     summary="Update a category",
+     *     tags={"Categories"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="ID of the category to update",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *             format="int64"
+     *         )
+     *     ),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             @OA\Property(property="category_name", type="string", example="New Category Name"),
+     *             @OA\Property(property="position", type="integer", example=1)
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful operation",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Category updated successfully")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Invalid data provided",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Error message describing the issue")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Category not found",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Category not found")
+     *         )
+     *     )
+     * )
+     */
+    public function update(Request $request, $id ) {
+        try {
+            $data = $request->validate([
+                'category_name' => 'required|string|unique:categories,category_name,'.$id,
+                'position' => 'required|integer|unique:categories,position,'.$id,
+            ]);
+
+            $category = Category::findOrFail($id);
+            $category->update($data);
+
+            return response()->json(['message' => 'Category updated successfully'], 200);
+        }catch (\Throwable $e) {
+            return response()->json(['message' => $e->getMessage()], 400);
+        }
+    }
+
+    /**
+     * @OA\Delete(
+     *     path="/api/v1/categories/{id}",
+     *     summary="Delete a category",
+     *     tags={"Categories"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="ID of the category to delete",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *             format="int64"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful operation",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Category deleted successfully")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Category not found",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Category not found")
+     *         )
+     *     )
+     * )
+     */
+    public function delete($id) {
+        try {
+            $category = Category::findOrFail($id);
+            $category->delete();
+
+            return response()->json(['Message' => 'Category deleted successfully'], 200);
+        }catch (\Throwable $e) {
+            return response()->json(['message' => 'Category not found'], 404);
         }
     }
      
